templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-domaine
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: domaine.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: domaine-service # metadata->name dans le fichier service.yaml
                port:
                  number: 80
    # Si vous créez un service pour le backend séparé du frontend
    - host: api.domaine.example
      http:
        paths:
          - backend:
              service:
                name: back-domaine-service # metadata->name dans le fichier service.yaml
                port:
                  number: 80
            path: /
            pathType: Prefix
# Static IP
status:
  loadBalancer:
    ingress:
      - ip: xxx.xxx.xxx.xxx # 172.27.132.88
